// Vitest Snapshot v1

exports[`falls back to color1 for color-0.5 in tailwind 1`] = `
"tag App
	<self>
		<div [bgc@md:gray1]>
			<span>
				\\"Test\\"
"
`;

exports[`simple class 1`] = `
"tag App
	<self>
		<div [bgc:gray2]>
			<span>
				\\"Test\\"
"
`;

exports[`simple class with breakpoint 1`] = `
"tag App
	<self>
		<div [bgc@md:gray2]>
			<span>
				\\"Test\\"
"
`;
